fix preloader size on firefox mobile

--- a/app/styles/_media.sass
+++ b/app/styles/_media.sass
@@ -7,8 +7,8 @@
 @media (max-width: 768px)
   .preloader
     width: 240px
-    height: 56px
-    background-size: 240px 56px
+    height: 41px
+    background-size: 240px 41px
   .modal-body
     width: 90%
     height: auto
